--- a/cwweb/WebContent/static/css/demo.css
+++ b/cwweb/WebContent/static/css/demo.css
@@ -1,9 +1,9 @@
-ï»¿.fz12{font-size:12px;}
+.fz12{font-size:12px;}
 .main{padding-bottom:60px; padding-top:36px;}
 .main h1,
 .main h2,
 .main h3{padding-left:10px;}
-.main h1{text-align:center;color: #212222; font-family: "microsoft yahei"; font-size: 36px; font-weight: normal; line-height: 2em; margin-bottom: 36px;}
+.main h1{text-align:center;color: #212222; font-family:  '¥Ò¥é¥®¥Î½Ç¥´¥·¥Ã¥¯', 'Hiragino Sans', '¥Ò¥é¥®¥Î½Ç¥´ ProN W3', 'Hiragino Kaku Gothic ProN', '¥á¥¤¥ê¥ª', 'Meiryo', '£Í£Ó £Ð¥´¥·¥Ã¥¯', 'MS PGothic', sans-serif; font-size: 36px; font-weight: normal; line-height: 2em; margin-bottom: 36px;}
 .main h2{background-color:#eee; line-height:2!important;}
 .main h3{font-size:20px; margin-bottom:10px;}
 .lireset2{padding-left:10px;}
