--- a/cwweb/WebContent/static/css/login.css
+++ b/cwweb/WebContent/static/css/login.css
@@ -30,7 +30,7 @@ a { text-decoration:none; color:#009bd8 }
 .banner .bd li{ width:100% !important;  height:478px; }
 .banner .bd li .siteWidth{ width:1000px; position:relative;  margin:0 auto;  height:299px;  }
 .banner .bd li a{ height:299px; display:block;  }
-.banner .bd .txt{ position:absolute; width:415px; top:100px; left:22px;   font:normal 18px/30px "Microsoft YaHei";    }
+.banner .bd .txt{ position:absolute; width:415px; top:100px; left:22px;   font:normal 18px/30px  '¥Ò¥é¥®¥Î½Ç¥´¥·¥Ã¥¯', 'Hiragino Sans', '¥Ò¥é¥®¥Î½Ç¥´ ProN W3', 'Hiragino Kaku Gothic ProN', '¥á¥¤¥ê¥ª', 'Meiryo', '£Í£Ó £Ð¥´¥·¥Ã¥¯', 'MS PGothic', sans-serif;    }
 .banner-shadow{ height:50px; line-height:50px; background:url(../images/banner-shdow.png) repeat-x;}
 .footer{text-align:center; font-size:12px; color:#999999;}
 .login-aside{position:absolute; width:320px; height:380px; z-index:9999999; border-radius:5px; left:58%; top:40px;}
